# parallel-job

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
src/parallel_job/: chart.py  doc.py  parallel.py  test.py  type_helper.py  utils.py
tests/: test_version.py
